src/objects/MTM__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>Rec_Type_Misure_Cliente_Giacca_1_5_petto__c</fullName>
        <label>Rec Type Misure Cliente Giacca 1,5 petto</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rec_Type_Misure_Cliente_Giacca_1_petto__c</fullName>
        <label>Rec Type Misure Cliente Giacca 1 petto</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rec_Type_Misure_Cliente_Pantalone__c</fullName>
        <label>Rec Type Misure Cliente Pantalone</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <label>MTM</label>
</CustomObject>